# depot-tracking

./: .gitignore  README.md  main.py  pyproject.toml
banking_app/applications/: __init__.py  cli.py  di.py
banking_app/applications/download/: cli_output.py  downloading_application.py
banking_app/applications/ingestion/: ingestion_application.py
banking_app/applications/portfolio/: portfolio_application.py
banking_app/applications/repair/: repair_application.py
banking_app/applications/workflow/: workflow_application.py
banking_app/components/: __init__.py
banking_app/components/analytics/: service.py
banking_app/components/cli/: __init__.py
banking_app/components/data_operations/: asset_value_data_operations.py  holding_snapshot_repository.py  models.py  processed_file_data_operations.py  product_data_operations.py  product_repository.py
banking_app/core/: models.py  parser_errors.py
depot_tracking/: __init__.py  config.py
depot_tracking/applications/: __init__.py  cli.py  di.py
depot_tracking/components/: storage.py
depot_tracking/core/: __init__.py  db.py
incoming_pdfs/cortal_consors/: .selenium_downloaded_rows_consors.json
scripts/: backfill_monthly_yahoo_history.py
sql/: 001_schema.sql  002_profit_views.sql
tests/banking_app/: test_consors_pdf_parser.py  test_consors_selenium_downloader.py  test_db.py  test_di_application.py  test_downloader_factory.py  test_history_plot.py  test_parser_factory.py  test_pdf_parser.py  test_service.py  test_sqlite_session_factory.py  test_trade_republic_pdf_parser.py  test_transactions_decorator.py
(+73 files in other folders)
